header alignment fix

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -44,7 +44,8 @@ header {
     }
     #logo {
       left: 50%;
-      transform: translateX(-50%);
+      top: 50%;
+      transform: translate(-50%, -50%);
       a {
         display: flex;
         position: relative;
@@ -138,6 +139,9 @@ header {
             padding: 6px;
             width: 18px;
             height: 18px;
+          }
+          @media (max-width: 500px) {
+            padding: 4px;
           }
         }
       }
